[metadata]
name = Root Driving History
author = applicant
author_email = applicant@joinroot.com
long_description = file: README.md
requires-python = >=3.7
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python